--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,46 @@ h1 {
     display: inline-block;
     mask-image: linear-gradient(262deg, rgba(60,36,26,1) 0%, rgba(230,63,13,1) 100%);
 }
+
+.dropdown {
+    background-color: white;
+    padding: 10px;
+    width: 208px;
+    border-radius: 2px;
+    position: absolute;
+    font-size: 18px;
+    top: 80px;
+    margin-left: 30px;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, -4px 30px 0px 23px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, -4px 30px 0px 23px rgba(0,0,0,0);
+}
+
+.dropdown > div {
+    margin: 10px 0;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.dropdown > div:hover {
+    background-color: antiquewhite;
+}
+
+.container-cards {
+    max-width: 1200px;
+    height: 600px;
+    margin: auto;
+    margin-top: 60px;
+    display: flex;
+}
+
+.container-cards > .card {
+    width: calc(100% / 3);
+    background-color: red;
+    height: 600px;
+    margin: 0 15px;
+}
+
+.img-card > img {
+    width: 100%;
+    object-fit: cover;
+}
