--- a/css/style.css
+++ b/css/style.css
@@ -78,16 +78,45 @@ h1 {
     margin: auto;
     margin-top: 60px;
     display: flex;
+    justify-content: center;
 }
 
 .container-cards > .card {
-    width: calc(100% / 3);
-    background-color: red;
+    width: 255px;
+    background-color: #F8F8F8;
     height: 600px;
     margin: 0 15px;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid grey;
+    border-radius: 5px;
+}
+
+.img-card {
+    width: 250px;
+    height: 250px;
 }
 
 .img-card > img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
+    display: inline-block;
+}
+
+.info {
+    padding: 20px;
+}
+
+.info > * {
+    margin-bottom: 15px;
+}
+
+.info > h3 {
+    font-size: 25px;
+    width: 250px;
+}
+
+.icon > i {
+    margin-left: 15px;
 }
