--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ h1 {
 
 .container-cards {
     max-width: 1200px;
-    height: 600px;
     margin: auto;
     margin-top: 60px;
     display: flex;
@@ -84,12 +83,12 @@ h1 {
 .container-cards > .card {
     width: 255px;
     background-color: #F8F8F8;
-    height: 600px;
     margin: 0 15px;
     display: flex;
     flex-direction: column;
     border: 2px solid grey;
     border-radius: 5px;
+    padding-bottom: 20px;
 }
 
 .img-card {
@@ -119,4 +118,22 @@ h1 {
 
 .icon > i {
     margin-left: 15px;
+}
+
+.button {
+    text-align: center;
+}
+
+.button > * {
+    padding: 12px 50px;
+    cursor: pointer;
+    background-color: gold;
+    border: 1px solid black;
+    border-radius: 5px;
+    transition: 0.2s all ease-in-out;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
 }
